--- a/2.3.md
+++ b/2.3.md
@@ -15,11 +15,13 @@
 - **Мониторинг электронного обучения**
 - Справочные системы **«Декан»**, **«Начальник УМУ»**, **«Проректор»**
 - WEB-ресурсы **«Атлас образовательных программ»** и **«Справочник образовательных маршрутов»**, **«Декан-онлайн»**, **«Преподаватель-онлайн»**, **«Расписание-онлайн»**, **«Электронный счет»**
+#### База данных ИСУП
+Все проекты работают с единой базой данных, в которой содержится информация о студентах, преподавателях, образовательных программах, аудиторном фонде и многое другое. Общее количество пользователей — около 500, не считая преподавателей, одновременно с базой данных работает ежедневно около 150 пользователей.
 
 ### ПО для решения задач общего назначения
 - 1С 8.3
 - система дистанционного образования Moodle
 - для организации видеоконференций Skype, Zoom
-- White Crown 2 для работы с ИСУП
+- WhiteCrow 2 для работы с ИСУП
 - пакет MS Office
 - браузеры Internet Explorer/Microsoft Edge, Google Chrome
