--- a/2.3.md
+++ b/2.3.md
@@ -1,3 +1,10 @@
+### Основные задачи
+- развитие структурированной кабельной сети;
+- развитие видеоконференций;
+- развитие сетевых технологий;
+- развитие технологий дистанционного обучения;
+- внедрение видеопрезентационных систем.
+
 ### ИСУП
 **Интегрированная информационная система** используется во всех структурных подразделениях университета, связанных с планированием, организацией и управлением учебным процессом (ИСУП), направлена на повышение эффективности их деятельности и взаимодействия на основе широкого использования современных средств информационных технологий.
 
@@ -18,10 +25,10 @@
 #### База данных ИСУП
 Все проекты работают с единой базой данных, в которой содержится информация о студентах, преподавателях, образовательных программах, аудиторном фонде и многое другое. Общее количество пользователей — около 500, не считая преподавателей, одновременно с базой данных работает ежедневно около 150 пользователей.
 
-### ПО для решения задач общего назначения
-- 1С 8.3
-- система дистанционного образования Moodle
-- для организации видеоконференций Skype, Zoom
-- WhiteCrow 2 для работы с ИСУП
-- пакет MS Office
-- браузеры Internet Explorer/Microsoft Edge, Google Chrome
+### ПО для решения задач общего назначения:
+- 1С 8.3;
+- система дистанционного образования Moodle;
+- для организации видеоконференций Skype, Zoom;
+- WhiteCrow 2 для работы с ИСУП;
+- пакет MS Office;
+- браузеры Internet Explorer/Microsoft Edge, Google Chrome.
