--- a/2.4.md
+++ b/2.4.md
@@ -1,11 +1,11 @@
-Модель микропроцессора: Intel Core i5-3210M
-Тактовая частота микропроцессора: 2.50GHz
-Оъем и вид памяти: 8GB DDR3
-Модель системной платы: IdeaPad Z580
-Шины системной платы: PCI-EXPRESS
-модель винчестера: ST1000LM 024 HN-M101MBB 
-емкость: 9563869МB
-интерфейс: SCSI
-модель видеокарты: NVIDIA GeForce GT 640M
-объем видеопамяти: 2GB
-модем: 
+1. Модель микропроцессора: Intel Core i5-3210M
+2. Тактовая частота микропроцессора: 2.50GHz
+3. Оъем и вид памяти: 8GB DDR3
+4. Модель системной платы: IdeaPad Z580
+5. Шины системной платы: PCI-EXPRESS
+6. модель винчестера: ST1000LM 024 HN-M101MBB 
+7. емкость: 9563869МB
+8. интерфейс: SCSI
+9. модель видеокарты: NVIDIA GeForce GT 640M
+10. объем видеопамяти: 2GB
+11. модем: 
