--- a/2.4.md
+++ b/2.4.md
@@ -3,9 +3,9 @@
 3. Оъем и вид памяти: 8GB DDR3
 4. Модель системной платы: IdeaPad Z580
 5. Шины системной платы: PCI-EXPRESS
-6. модель винчестера: ST1000LM 024 HN-M101MBB 
-7. емкость: 9563869МB
-8. интерфейс: SCSI
-9. модель видеокарты: NVIDIA GeForce GT 640M
-10. объем видеопамяти: 2GB
-11. модем: 
+6. Модель винчестера: ST1000LM 024 HN-M101MBB 
+7. Ёмкость: 9563869МB
+8. Интерфейс: SCSI
+9. Модель видеокарты: NVIDIA GeForce GT 640M
+10. Объем видеопамяти: 2GB
+11. Модем: TP-Link ArcherC1200
